Création page bienvenue

--- a/templates/utilisateur/show.html.twig
+++ b/templates/utilisateur/show.html.twig
@@ -6,7 +6,7 @@
 
     <h1>{{ utilisateur.pseudo }}</h1>
     <p>
-        {{ utilisateur.mail }} <br>
+        {{ utilisateur.email }} <br>
         Date d'inscription : {{ utilisateur.dateInscription | date('d-m-Y') }}
     </p>
 
