--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
         <nav>
             <ul>
                 <li><a href="{{ path('app_utilisateur') }}">Liste utilisateurs</a></li>
+                <li><a href="{{ path('app_logout') }}">Se déconnecter</a></li>
             </ul>
         </nav>
         {% block body %}{% endblock %}
