--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,9 @@
                     <li><a href="{{ path('app_login') }}">Se connecter</a></li>
                     <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
                 {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li><a href="">Panneau d'administration</a></li>
+                {% endif %}
             </ul>
         </nav>
         {% block body %}{% endblock %}
