Début intégration de la page pour jouer les decks

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,9 @@
                 {% endif %}
             </ul>
         </nav>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+        {% endblock %}
         {% block javascripts %}
             <script src="{{ asset('js/script.js') }}"></script>
         {% endblock %}
