--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,3 +5,49 @@ h1 {
 h2 {
     color: blue;
 }
+
+
+
+.tabs {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+  }
+  
+  .tab-buttons {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .tab-button {
+    background-color: #ccc;
+    border: none;
+    color: #333;
+    cursor: pointer;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px 5px 0 0;
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  .tab-button.active {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-bottom: none;
+  }
+  
+  .tab-contents {
+    margin-top: 10px;
+  }
+  
+  .tab-content {
+    display: none;
+    padding: 20px;
+  }
+  
+  .tab-content.active {
+    display: block;
+  }
+  
+  
