--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -46,4 +46,7 @@
     </div>
   </div>
 
+  <p>Cliquez sur le bouton pour générer le PDF :</p>
+    <a href="{{ path('pdf', { 'id': deck.id }) }}" target="_blank">Générer PDF</a>
+
 {% endblock %}
