--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -31,14 +31,14 @@
       <button class="tab-button green" data-tab="tab4">{{cartesLevel2|length}}</button>
     </div>
 
-    <div class="tab-contents">
+    <div id="container-tab-contents">
       <div class="tab-content active" data-tab="tab1">
 
         {% if cartesDeckNotInPositionCartesByUtilisateur|length != 0 %}
+        <div class="carte">
             {% set randomCartesDeckNotInPositionCartesByUtilisateur = random(cartesDeckNotInPositionCartesByUtilisateur)%}
             {{ randomCartesDeckNotInPositionCartesByUtilisateur.question }}
-
-
+        </div>
         {% else %}
             Pas de cartes dans cet onglet !
         {% endif %} 
@@ -47,8 +47,10 @@
       <div class="tab-content" data-tab="tab2">
 
         {% if cartesLevel0|length != 0 %}
+        <div class="carte">
             {% set randomCarteLevel0 = random(cartesLevel0)%}
             {{randomCarteLevel0.question }}
+        </div>
         {% else %}
             Pas de cartes dans cet onglet !
         {% endif %} 
@@ -57,8 +59,10 @@
       <div class="tab-content" data-tab="tab3">
 
         {% if cartesLevel1|length != 0 %}
+        <div class="carte">
             {% set randomCarteLevel1 = random(cartesLevel1)%}
             {{randomCarteLevel1.question }}
+        </div>
         {% else %}
             Pas de cartes dans cet onglet !
         {% endif %} 
@@ -67,8 +71,10 @@
       <div class="tab-content" data-tab="tab4">
 
         {% if cartesLevel2|length != 0 %}
+        <div class="carte">
             {% set randomCarteLevel2 = random(cartesLevel2)%}
             {{randomCarteLevel1.question }}
+        </div>
         {% else %}
             Pas de cartes dans cet onglet !
         {% endif %} 
