--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -23,12 +23,16 @@
 
 {% endfor %} 
 
+<button onmouseover="chg()" onmouseout="chg2()" id="d1">Hover Over Me!</button>
+
+
+
 <div class="tabs">
     <div class="tab-buttons">
-      <button class="tab-button grey active" data-tab="tab1">{{cartesDeckNotInPositionCartesByUtilisateur|length}}</button>
-      <button class="tab-button red" data-tab="tab2">{{cartesLevel0|length}}</button>
-      <button class="tab-button blue" data-tab="tab3">{{cartesLevel1|length}}</button>
-      <button class="tab-button green" data-tab="tab4">{{cartesLevel2|length}}</button>
+      <button class="tab-button grey active" data-tab="tab1"><span class="active" data-tab="tab1">Cartes non jouées : </span>{{cartesDeckNotInPositionCartesByUtilisateur|length}}</button>
+      <button class="tab-button red" data-tab="tab2"><span class="" data-tab="tab2">Cartes non connues : </span>{{cartesLevel0|length}}</button>
+      <button class="tab-button blue" data-tab="tab3"><span class="" data-tab="tab3">Cartes à revoir : </span>{{cartesLevel1|length}}</button>
+      <button class="tab-button green" data-tab="tab4"><span class="" data-tab="tab4">Cartes connues : </span>{{cartesLevel2|length}}</button>
     </div>
 
     <div id="container-tab-contents">
