--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,11 +7,30 @@ h2 {
 }
 
 
+#formulairePdf{
+  text-align: center;
+}
 
-.tabs {
+
+
+#azerty{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+}
+
+#playDeckZone{
+  width: 750px;
+  background-color: antiquewhite;
+  text-align: center;
+  padding: 0px;
+}
+
+#tabsPlayDeck {
     display: flex;
     flex-direction: column;
-    margin: 20px;
+    margin: 0px;
+    padding: 20px;
   }
   
   .tab-buttons {
